Sidenav fix: horizontal scrollbar when collapsed to right

--- a/sidenav/svy-sidenav.css
+++ b/sidenav/svy-sidenav.css
@@ -161,12 +161,20 @@
 }
 
 .svy-slide-out.svy-sidenav-right {
-	border-left-width: 0;
+    float: right;
+    width: 0; /* Set with to 0 when collapsed to the right to avoid hor scrollbar */
+    border-left-width: 0;
 	-webkit-transform: translate(100%, 0);
      -moz-transform: translate(100%, 0);
       -ms-transform: translate(100%, 0);
        -o-transform: translate(100%, 0);
           transform: translate(100%, 0);
+}
+
+/* Set with to 0 when collapsed to the right to avoid hor scrollbar */
+.svy-slide-out.svy-sidenav-right.svy-slide-out-add,
+.svy-slide-out.svy-sidenav-right.svy-slide-out-remove {
+	width: 100%;
 }
 
 .svy-slide-out.svy-sidenav-left .svy-sidenav-content {
